# UltraGUI

./: .gitignore  CMakeLists.txt  README.md  UltraGUI.pro  cpp.astylerc  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
UltraGUI/: mainwindow.cpp  mainwindow.ui
UltraGUI/components/: UltraGUI_global.h  ultrabutton.h  ultralinesgraph.h  ultraloadingbar.h  ultraloadingcircle.cpp  ultrascroll.h  ultraselector.h  ultratoggle.h  ultratypes.h
components/: ultrabarsgraph.cpp  ultrabarsgraph.h  ultrabutton.cpp  ultrabutton.h  ultragui.cpp  ultragui.h  ultraled.cpp  ultraled.h  ultralinesgraph.cpp  ultraloadingbar.cpp  ultraloadingcircle.h  ultraloadingdots.cpp  ultraloadingdots.h  ultraloadingsquares.cpp  ultraloadingsquares.h  ultralogs.cpp  ultralogs.h  ultrascroll.cpp  ultraselector.cpp  ultraslider.cpp  ultraslider.h  ultratoggle.cpp  ultratoggle.h
src/: buttonbehavior.cpp  buttonbehavior.h  buttonlogic.cpp  buttonlogic.h  types.h  ugbutton.cpp  ugbutton.h  ugbuttonarray.cpp  ugbuttonarray.h  ugframe.cpp  ugframe.h  ugled.cpp  ugled.h  ugloadingbar.cpp  ugloadingbar.h  ugloadingcircle.cpp  ugloadingcircle.h  ugloadingdots.cpp  ugloadingdots.h  ugloadingsquares.cpp  ugloadingsquares.h  uglogger.cpp  uglogger.h  ugoscilloscope.cpp  ugoscilloscope.h  ugpicker.cpp  ugpicker.h  ugplotter.cpp  ugplotter.h  ugscroll.cpp  ugscroll.h  ugsegdisplay.cpp  ugsegdisplay.h  ugselector.cpp  ugselector.h  ugslider.cpp  ugslider.h  ugtoggle.cpp  ugtoggle.h  ultrabutton.cpp  (+27 more)
testApp/: mainwindow.cpp  mainwindow.h  mainwindow.ui
testApplication/: mainwindow.cpp  mainwindow.h  mainwindow.ui
